--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wix/sdk": "^1.17.1",
     "@wix/stores": "^1.0.512",
+    "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
